nav margins/ layout improvement, fixed horizontal overflow on smaller screen devices

--- a/src/assets/stylesheets/home.scss
+++ b/src/assets/stylesheets/home.scss
@@ -5,7 +5,6 @@
 .hero {
   user-select: none; 
   display: flex; 
-  margin-top: 5vh;
   height: 85vh;
   position: relative; 
   /* .aB{
