--- a/src/assets/stylesheets/index.scss
+++ b/src/assets/stylesheets/index.scss
@@ -75,6 +75,9 @@ a {
     }
 }
 
+body{
+    overflow-x:hidden;
+}
 
 svg {
   position: absolute;
