--- a/src/assets/stylesheets/nav.scss
+++ b/src/assets/stylesheets/nav.scss
@@ -6,6 +6,7 @@ nav {
   display: flex;
   justify-content: space-between;
   position: relative;
+  margin-bottom: 4vh;
 
   .logo {
     img {
